<resources>
    <string name="app_name">Monitory</string>

    //bigtext
    <string name="intro">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="agreement">Dengan menekan tombol masuk berarti Anda menyetujui <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami</string>
    <string name="finish_text">Beres! Sekarang %s udah bisa ngecek penggunaan HP mu tiap hari buat bantu kamu ngatur waktu :)</string>

    //buttons
    <string name="oke">Oke</string>
    <string name="next">Selanjutnya</string>
    <string name="start">Mulai</string>

    //fields
    <string name="field_hint_umur">Contoh: 12</string>
    <string name="field_umur">Umur Kamu</string>
    <string name="field_hint_nama">Contoh: Budi</string>
    <string name="field_nama">Nama Panggilan Kamu</string>

    //verif-act
    <string name="verif_kk">Kode Keluarga</string>
    <string name="verif_subtitle">Ketikkan kode keluarga yang Ayah Bunda miliki di sini</string>
    <string name="verif_in">Masuk</string>
    <string name="verif_no_kk">Belum punya kode keluarga?</string>
    <string name="verif_buy_kk">Beli Kode Keluarga Disini</string>

</resources>